# kv-rust

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
.opencode/skills/adr-writer/: SKILL.md
.opencode/skills/prd-writer/: SKILL.md
docs/: TESTING.md
docs/adrs/: 001-web-api-endpoint-design.md  002-api-documentation-technology-choice.md
docs/prds/: 001-api-documentation.md
docs/prds/specs/: storage-service-layer.md
src/: lib.rs  main.rs
src/app/: error_handler.rs  health.rs  mod.rs  models.rs  openapi.rs  read_ops.rs  write_ops.rs
src/service/: error.rs  in_memory.rs  interface.rs  mod.rs  tests.rs
src/types/: key.rs  mod.rs
tests/: api_integration_test.rs
