[package]
name = "kv-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
# Async runtime (included with actix-web, but explicit is good)
actix-rt = "2"
# JSON serialization (for future endpoints)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[dev-dependencies]
# For testing HTTP endpoints
reqwest = { version = "0.12", features = ["json"] }
actix-rt = "2"