[package]
name = "kv-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
# Async runtime (included with actix-web, but explicit is good)
actix-rt = "2"
dashmap = "6.0"
# JSON serialization (for future endpoints)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Date/time handling for metadata timestamps
chrono = { version = "0.4", features = ["serde"] }

validator = { version = "0.18", features = ["derive"] }
regex = "1"

utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
utoipa-redoc = { version = "5", features = ["actix-web"] }
utoipa-rapidoc = { version = "5", features = ["actix-web"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

[dev-dependencies]
# For testing HTTP endpoints
reqwest = { version = "0.12", features = ["json"] }
actix-rt = "2"